fix enabling service

--- a/xboxdrvDaemon.service
+++ b/xboxdrvDaemon.service
@@ -1,4 +1,8 @@
 [Unit]
 Description=yet another xboxdrv daemon
+
 [Service]
 ExecStart=/bin/bash /usr/local/bin/xboxdrvDaemon
+
+[Install]
+WantedBy=multi-user.target
